- Small theme fixes
- Fixes from 4.2.12

15-08-2013 5.0.0 (beta)
- Complete redesigned interface
- Added recursive search for Imap folders
- VoIP will rewrite tel: links to callto: in Firefox in Windows
- Updated VObject to 3.1
- Updated Sabredav to 1.8.6
- Address Book module: photos functionality for companies.
- Projects module: 'show in tree' check box for project statuses.

20-08-2013 4.2.12
- Bug in attachment download
- Fixed security vulnerability
- Minimized disk access in files module
- Detect company employees for document templates as well so they don't need to be linked
- Added participant status to view grid.
- Added a check for empty "name" property in an email part to determine if it is a mail body or an attachment
- Added check for (left)mousebutton in onmousedown event in the calendarGrid so the dragevent will not be fired when doing a right click
- Billing module, duplicate order: duplicate window --> default no link to original, no duplicate window --> default link to original.

13-08-2013 4.2.11
- Fixed duplicate entry error on installer.
- Fixed problem with downloading attachments on old Android phones with ActiveSync.
- Disabled session_start() for webdav to fix Mac Finder issue with uploads
- Project cached attributes are changed to display useful text in the link dialog
- In the ticket email, added links to files that are attached to a new ticket message.
- Fixed "Show unread" /  "Show all" button state in the email module when switching message panel position.
- Address Book module: List company name along side contacts in Address List contacts grid.

05-08-2013 4.2.10
- Moved address list filter from accordion to separate panel underneath the accordion panel.
- Fixed imap import for tickets when no subject is given in the email.
- Address Book module: It is now possible to export all hidden fields into CSV, HTML and PDF.
- Check if base64 encoded strings can be divided by 4 if decoded line by line to 
  avoid corrupted mails.