@@ -11,6 +11,10 @@
 - Address Book module: photos functionality for companies.
 - Projects module: 'show in tree' check box for project statuses.
 
+
+- Get capability from IMAP login command
+- Query unseen messages only when modseq changes
+
 20-08-2013 4.2.12
 - Bug in attachment download
 - Fixed security vulnerability
